@@ -88,6 +88,7 @@ void ExportEPUB::WriteBook()
         m_Book->GetOPF().EnsureUUIDIdentifierPresent();
 
     m_Book->GetOPF().AddSigilVersionMeta();
+    m_Book->GetOPF().AddModificationDateMeta();
     m_Book->SaveAllResourcesToDisk();
 
     TempFolder tempfolder;
